# siem-lite

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  ENHANCEMENTS.md  EXECUTION_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  security.yml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  CICD.md  DOCKER.md  DOCUMENTATION_STATUS.md  INDEX.md  MONITORING.md  conf.py  configuration.rst  contributing.rst  development.rst  index.rst  installation.rst  modules.rst  siem_lite.data.rst  siem_lite.domain.rst  siem_lite.infrastructure.rst  siem_lite.rst
docs/api/: alerts.rst  health.rst  index.rst  schemas.rst  stats.rst
docs/domain/: entities.rst  index.rst  interfaces.rst  rules.rst  services.rst
docs/infrastructure/: database.rst  index.rst  models.rst  parsers.rst  processors.rst  repositories.rst
docs/utils/: config.rst  exceptions.rst  index.rst  logging.rst  security.rst  validation.rst
monitoring/grafana/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: siem_lite_rules.yml
nginx/: nginx.conf
scripts/: dashboard.sh  deploy.sh  setup.sh  start.sh
siem_lite/: __init__.py  cli.py  cli_dashboard.py  main.py  schemas.py
siem_lite/api/: __init__.py  alerts.py  health.py  metrics.py  root.py  schemas.py  stats.py
siem_lite/data/: __init__.py
siem_lite/domain/: __init__.py  entities.py  features.py  interfaces.py  rules.py  services.py
siem_lite/infrastructure/: __init__.py  attack_simulator.py  database.py  incident_response.py  log_generator.py  models.py  parsers.py  processor.py  report_generator.py  repositories_fixed.py
siem_lite/utils/: __init__.py  config.py  exceptions.py  i18n.py  logging.py  metrics.py  security.py  validation.py
tests/: conftest.py  test_api.py  test_domain.py
